fixed a small bug on mobile

--- a/css/basics/editor.css
+++ b/css/basics/editor.css
@@ -47,14 +47,14 @@ canvas:focus {
 }
 
 .save-confirmation-modal {
-	position: absolute;
-	right: 10px;
+	position: fixed;
+	right: 0;
 	padding: 2em 0.8em;
 	border-radius: 2em;
 	color: #ffffff;
 	background-color: var(--primary-color-2);
-	transform: translateX(120%);
-	transition: transform 0.4s;
+	transform: translateX(100%);
+	transition: transform 0.6s;
 }
 
 .save-confirmation-modal.shown {
