--- a/css/basics/gallery.css
+++ b/css/basics/gallery.css
@@ -17,17 +17,10 @@
 	overflow-y: auto;
 	height: 80vh;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	gap: 20px;
 	align-items: center;
 	padding-inline: 50px;
-}
-
-@media screen and (min-width: 500px) {
-	.memes-grid-container {
-		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-		grid-template-rows: repeat(5, 1fr);
-	}
 }
 
 .meme-list-image > * {
